24-10-2025/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-api-service
spec:
  type: NodePort
  selector:
    app: simple-api
  ports:
  - port: 80
    targetPort: 80
